# RecordLearnOpenGL

./: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt  LOG.h
Core/AssetsLoad/: AssetsLoad.cpp  AssetsLoad.h  File.cpp  File.h
Core/Class/: Camera.cpp  Camera.h  Transform.cpp  Transform.h
Core/Data/: CubeMap.cpp  CubeMap.h  Mesh.cpp  Mesh.h  Shader.h  Texture2D.cpp  Texture2D.h
Core/Light/: DirLight.cpp  DirLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Core/Math/: Matrix4x4.cpp  Matrix4x4.h  Vector3.cpp  Vector3.h
Shaders/: DefaultShader.frag  DefaultShader.vert  Shadow.frag  Shadow.vert  SkyBoxShader.vert  depthMap.frag  depthMap.vert  explode.geom  explode.vert  model.frag  showNormal.geom  showNormal.vert
